--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -1,10 +1,13 @@
 plugins {
-    id 'java-library'
+    id 'application'
 }
+group 'com.desktopModule'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
+    withSourcesJar()
+    withJavadocJar()
 }
 dependencies {
     implementation "org.jmonkeyengine:jme3-core:3.4.0-stable"
@@ -13,9 +16,8 @@ dependencies {
     implementation "org.jmonkeyengine:jme3-desktop:3.4.0-stable"
 }
 
-jar{
+jar {
     manifest {
         attributes('Main-Class': 'com.example.desktopmodule.DesktopLauncher')
     }
 }
-
