Added mainClass attribute for java closure

--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -4,6 +4,7 @@ plugins {
 group 'com.desktopModule'
 
 java {
+    mainClassName = 'com.example.desktopmodule.DesktopLauncher'
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
     withSourcesJar()
