--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation project(path: ':desktop')
+    implementation project(path: ':game')
     implementation "org.jmonkeyengine:jme3-core:3.4.0-stable"
     implementation "org.jmonkeyengine:jme3-effects:3.4.0-stable"
     implementation "org.jmonkeyengine:jme3-android-native:3.4.0-stable"
