--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -1,24 +1,28 @@
 plugins {
     id 'application'
 }
+
 group 'com.desktopModule'
+version '3.2-testcase'
 
 java {
-    mainClassName = 'com.example.desktopmodule.DesktopLauncher'
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
-    withSourcesJar()
-    withJavadocJar()
 }
+
 dependencies {
-    implementation "org.jmonkeyengine:jme3-core:3.4.0-stable"
+    implementation project(path: ':game')
+    implementation 'org.jmonkeyengine:jme3-core:3.4.0-stable'
     implementation "org.jmonkeyengine:jme3-effects:3.4.0-stable"
     implementation "org.jmonkeyengine:jme3-lwjgl:3.4.0-stable"
     implementation "org.jmonkeyengine:jme3-desktop:3.4.0-stable"
 }
 
-jar {
+jar{
     manifest {
         attributes('Main-Class': 'com.example.desktopmodule.DesktopLauncher')
     }
 }
+
+
+
