Project: added game-assets module and enhances

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,20 @@
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
 rootProject.name = "CrossPlatformModule"
 include ':android'
 include ':desktop'
 include ':game'
+include ':game-assets'
