--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -2,20 +2,21 @@ plugins {
     id 'application'
 }
 
+apply from: file("../common.gradle")
+
 group 'com.desktopModule'
 version '3.2-testcase'
 mainClassName = 'com.example.desktopmodule.DesktopLauncher'
 String dependenciesString = ""
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+tasks.withType(JavaCompile) { // compile-time options [javac <options> <sources>]
+    options.compilerArgs << '-Xlint:unchecked'
+    options.encoding = 'UTF-8'
+    options.release = 8
 }
 
 dependencies {
     implementation project(path: ':game')
-    implementation 'org.jmonkeyengine:jme3-core:3.4.0-stable'
-    implementation "org.jmonkeyengine:jme3-effects:3.4.0-stable"
     implementation "org.jmonkeyengine:jme3-lwjgl:3.4.0-stable"
     implementation "org.jmonkeyengine:jme3-desktop:3.4.0-stable"
 }
