--- a/game/build.gradle
+++ b/game/build.gradle
@@ -2,14 +2,14 @@ plugins {
     id 'java-library'
 }
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+apply from: file("../common.gradle")
+
+tasks.withType(JavaCompile) { // compile-time options [javac <options> <sources>]
+    options.compilerArgs << '-Xlint:unchecked'
+    options.encoding = 'UTF-8'
+    options.release = 8
 }
 
 dependencies {
-    implementation 'org.jmonkeyengine:jme3-core:3.4.0-stable'
-    implementation "org.jmonkeyengine:jme3-effects:3.4.0-stable"
-    implementation "org.jmonkeyengine:jme3-lwjgl:3.4.0-stable"
-    implementation "org.jmonkeyengine:jme3-desktop:3.4.0-stable"
+    implementation project(path: ':game-assets')
 }
