--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,9 +26,6 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    configurations.all {
-        exclude group:"org.jmonkeyengine",module:"jme3-desktop"
-    }
 }
 
 dependencies {
@@ -39,5 +36,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation project(path: ':game')
-    implementation "org.jmonkeyengine:jme3-android-native:3.4.0-stable"
+    implementation "org.jmonkeyengine:jme3-android-native:3.6.0-beta3"
 }
