--- a/common.gradle
+++ b/common.gradle
@@ -1,4 +1,4 @@
 dependencies {
-    implementation "org.jmonkeyengine:jme3-core:3.4.0-stable"
-    implementation "org.jmonkeyengine:jme3-effects:3.4.0-stable"
+    implementation "org.jmonkeyengine:jme3-core:3.6.0-beta3"
+    implementation "org.jmonkeyengine:jme3-effects:3.6.0-beta3"
 }
